syntax = "proto3";

option csharp_namespace = "MyApp.Grpc";

package vehicle;


message VehicleResponse {
  string id = 1;
  string plateNumber = 2;
  string fuelEfficiency = 3;
  string averageFuelEfficiency = 4;
  bool isUnderMaintenance = 5;

}

service VehicleService {
  rpc GetVehicle (GetVehicleRequest) returns (VehicleResponse);
}

message GetVehicleRequest {
  string id = 1;
}
